# HRMS-Compliance-Service

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build-and-push.yml
app/: main.py
app/api/: dependencies.py
app/api/routes/: compliance.py
app/core/: cache.py  config.py  consumers.py  events.py  kafka.py  rbac.py  topics.py
